--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -80,3 +80,12 @@
   publisher={Vision},
   preview={wave-mechanics.gif}
 }
+
+@article{bing2022meta,
+  abbr={TPAMI},
+  title={Meta-reinforcement learning in non-stationary and dynamic environments},
+  author={Bing, Zhenshan and Lerch, David and Huang, Kai and Knoll, Alois},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year={2022},
+  publisher={IEEE},
+}
