--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,85 +1,6 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
 
 @article{bing2022meta,
   abbr={TPAMI},
@@ -88,4 +9,198 @@
   journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
   year={2022},
   publisher={IEEE},
+}
+
+@ARTICLE{9772990,  author={Bing, Zhenshan and Zhou, Hongkuan and Li, Rui and Su, Xiaojie and Morin, Fabrice Oliver and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Industrial Electronics},   title={Solving Robotic Manipulation with Sparse Reward Reinforcement Learning via Graph-Based Diversity and Proximity},   year={2022},  volume={},  number={},  pages={1-1},  doi={10.1109/TIE.2022.3172754},
+preview={gc-hgg.png}}
+
+@ARTICLE{9810498,  
+  abbr={TFS},
+  author={Tan, Yaoyao and Su, Xiaojie and Bing, Zhenshan and Yang, Xiaokui and Knoll, Alois},  journal={IEEE Transactions on Fuzzy Systems},   title={Reduced-Model Based Fault Detector and Controller Design for Discrete-Time Switching Fuzzy Systems},   year={2022},  volume={},  number={},  pages={1-13},  doi={10.1109/TFUZZ.2022.3187195}}
+
+@INPROCEEDINGS{9827283,  
+  abbr={IEEE IV}, author={Zhuang, Genghang and Cagnetta, Carlo and Bing, Zhenshan and Cao, Hu and Li, Xinyi and Huang, Kai and Knoll, Alois},  booktitle={2022 IEEE Intelligent Vehicles Symposium (IV)},   title={A Biologically-Inspired Global Localization System for Mobile Robots Using LiDAR Sensor},   year={2022},  volume={},  number={},  pages={984-990},  doi={10.1109/IV51971.2022.9827283}}
+
+@ARTICLE{9634854,  abbr={TNNLS}, author={Bing, Zhenshan and Sewisy, Amir EI and Zhuang, Genghang and Walter, Florian and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Toward Cognitive Navigation: Design and Implementation of a Biologically Inspired Head Direction Cell Network},   year={2022},  volume={33},  number={5},  pages={2147-2158},  doi={10.1109/TNNLS.2021.3128380}, preview={hdc.png}}
+
+@ARTICLE{9611526,  author={Bing, Zhenshan and Álvarez, Erick and Cheng, Long and Morin, Fabrice O. and Li, Rui and Su, Xiaojie and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Robotic Manipulation in Dynamic Scenarios via Bounding-Box-Based Hindsight Goal Generation},   year={2021},  volume={},  number={},  pages={1-14},  doi={10.1109/TNNLS.2021.3124366}, preview={bbox.png}}
+
+@ARTICLE{9466373,  author={Bing, Zhenshan and Brucker, Matthias and Morin, Fabrice O. and Li, Rui and Su, Xiaojie and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Complex Robotic Manipulation via Graph-Based Hindsight Goal Generation},   year={2021},  volume={},  number={},  pages={1-14},  doi={10.1109/TNNLS.2021.3088947}, preview={g-hgg.png}}
+
+@ARTICLE{10.3389/fnbot.2021.688344,
+  
+AUTHOR={López-Randulfe, Javier and Duswald, Tobias and Bing, Zhenshan and Knoll, Alois},   
+   
+TITLE={Spiking Neural Network for Fourier Transform and Object Detection for Automotive Radar},      
+  
+JOURNAL={Frontiers in Neurorobotics},      
+  
+VOLUME={15},           
+  
+YEAR={2021},      
+    
+URL={https://www.frontiersin.org/articles/10.3389/fnbot.2021.688344},       
+  
+DOI={10.3389/fnbot.2021.688344},      
+  
+ISSN={1662-5218},   
+   
+ABSTRACT={The development of advanced autonomous driving applications is hindered by the complex temporal structure of sensory data, as well as by the limited computational and energy resources of their on-board systems. Currently, neuromorphic engineering is a rapidly growing field that aims to design information processing systems similar to the human brain by leveraging novel algorithms based on spiking neural networks (SNNs). These systems are well-suited to recognize temporal patterns in data while maintaining a low energy consumption and offering highly parallel architectures for fast computation. However, the lack of effective algorithms for SNNs impedes their wide usage in mobile robot applications. This paper addresses the problem of radar signal processing by introducing a novel SNN that substitutes the discrete Fourier transform and constant false-alarm rate algorithm for raw radar data, where the weights and architecture of the SNN are derived from the original algorithms. We demonstrate that our proposed SNN can achieve competitive results compared to that of the original algorithms in simulated driving scenarios while retaining its spike-based nature.},
+
+preview={snn-ft.png}
+}
+
+@article{zhuang2021biologically,
+  abbr={arXiv},
+  title={A Biologically Inspired Simultaneous Localization and Mapping System Based on LiDAR Sensor},
+  author={Zhuang, Genghang and Bing, Zhenshan and Zhao, Jiaxi and Li, Ning and Huang, Yuhong and Huang, Kai and Knoll, Alois},
+  journal={arXiv preprint arXiv:2109.12910},
+  year={2021}
+}
+
+@article{bing2021meta,
+  abbr={arXiv},
+  title={Meta-Reinforcement Learning in Broad and Non-Parametric Environments},
+  author={Bing, Zhenshan and Knak, Lukas and Robin, Fabrice Oliver and Huang, Kai and Knoll, Alois},
+  journal={arXiv preprint arXiv:2108.03718},
+  year={2021}
+}
+
+
+
+
+
+
+
+@article{doi:10.1177/1729881421996146,
+abbr={IJARS},
+author = {Mingchuan Zhou and Huanyu Jiang and Zhenshan Bing and Hang Su and Alois Knoll},
+title ={Design and evaluation of the target spray platform},
+journal = {International Journal of Advanced Robotic Systems},
+volume = {18},
+number = {2},
+pages = {1729881421996146},
+year = {2021},
+doi = {10.1177/1729881421996146},
+
+URL = { 
+        https://doi.org/10.1177/1729881421996146
+    
+},
+eprint = { 
+        https://doi.org/10.1177/1729881421996146
+    
+}
+,
+    abstract = { The target-oriented spraying is an effective way to minimize chemical input in agricultural production and it is important to actualizing sustainable agriculture. This article focused on the design and optimization of the target spray platform. The spray platform consists of three parts: the vision system, the spray system, and the moving platform. All components were effectively connected and preliminarily evaluated especially regarding the response time and target spray accuracy. A simulation system was built considering the real crop geometric shape and nozzle spray pattern using the Monte Carlo method. The spray simulator was used to optimize the spray height objective function of spray deposition rate and coefficient of variance for the spray deposition. The spray process can be easily visualized and compared for different spray parameters. The indoor experiment setup was built to test and optimize the parameters of the overall system, which is flexible to verify the system. Afterward, the outdoor tractor-based equipment was designed to test the system for the field environment. The experimental result showed that 80\% of the crop had a spray deviation from 0 mm to 28 mm and the proposed spraying system can reduce 46.8\% usage of the chemical compared to the uniform spray method. }
+}
+
+@article{Bing_2017,
+  doi = {10.1088/1748-3190/aa644c},
+  url = {https://doi.org/10.1088/1748-3190/aa644c},
+  year = 2017,
+  month = {apr},
+  publisher = {{IOP} Publishing},
+  volume = {12},
+  number = {3},
+  pages = {035001},
+  author = {Zhenshan Bing and Long Cheng and Guang Chen and Florian Röhrbein and Kai Huang and Alois Knoll},
+  title = {Towards autonomous locomotion: {CPG}-based control of smooth 3D slithering gait transition of a snake-like robot},
+  journal = {Bioinspiration {\&}amp$\mathsemicolon$ Biomimetics},
+  abstract = {Snake-like robots with 3D locomotion ability have significant advantages of adaptive travelling in diverse complex terrain over traditional legged or wheeled mobile robots. Despite numerous developed gaits, these snake-like robots suffer from unsmooth gait transitions by changing the locomotion speed, direction, and body shape, which would potentially cause undesired movement and abnormal torque. Hence, there exists a knowledge gap for snake-like robots to achieve autonomous locomotion. To address this problem, this paper presents the smooth slithering gait transition control based on a lightweight central pattern generator (CPG) model for snake-like robots. First, based on the convergence behavior of the gradient system, a lightweight CPG model with fast computing time was designed and compared with other widely adopted CPG models. Then, by reshaping the body into a more stable geometry, the slithering gait was modified, and studied based on the proposed CPG model, including the gait transition of locomotion speed, moving direction, and body shape. In contrast to sinusoid-based method, extensive simulations and prototype experiments finally demonstrated that smooth slithering gait transition can be effectively achieved using the proposed CPG-based control method without generating undesired locomotion and abnormal torque.},
+  preview={snake-cpg-bb.png}
+}
+
+@INPROCEEDINGS{7989476,  author={Bing, Zhenshan and Cheng, Long and Huang, Kai and Zhou, Mingchuan and Knoll, Alois},  booktitle={2017 IEEE International Conference on Robotics and Automation (ICRA)},   title={CPG-based control of smooth transition for body shape and locomotion speed of a snake-like robot},   year={2017},  volume={},  number={},  pages={4146-4153},  doi={10.1109/ICRA.2017.7989476},
+preview={snake-cpg-icra.png}}
+
+@ARTICLE{7945270,  author={Chen, Guang and Bing, Zhenshan and Röhrbein, Florian and Conradt, Jörg and Huang, Kai and Cheng, Long and Jiang, Zhuangyi and Knoll, Alois},  journal={IEEE Transactions on Cognitive and Developmental Systems},   title={Toward Brain-Inspired Learning With the Neuromorphic Snake-Like Robot and the Neurorobotic Platform},   year={2019},  volume={11},  number={1},  pages={1-12},  doi={10.1109/TCDS.2017.2712712}, preview={neuro-snake.png}}
+
+@INPROCEEDINGS{8009760,  author={Bing, Zhenshan and Cheng, Long and Knoll, Alois and Zhong, Anyang and Huang, Kai and Zhang, Feihu},  booktitle={2017 20th International Conference on Information Fusion (Fusion)},   title={Slope angle estimation based on multi-sensor fusion for a snake-like robot},   year={2017},  volume={},  number={},  pages={1-6},  doi={10.23919/ICIF.2017.8009760}, preview={fusion-snake.png}}
+
+@INPROCEEDINGS{8206095,  author={Bing, Zhenshan and Cheng, Long and Huang, Kai and Jiang, Zhuangyi and Chen, Guang and Röhrbein, Florian and Knoll, Alois},  booktitle={2017 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},   title={Towards autonomous locomotion: Slithering gait design of a snake-like robot for target observation and tracking},   year={2017},  volume={},  number={},  pages={2698-2703},  doi={10.1109/IROS.2017.8206095}, preview={snake-iros.png}}
+
+@inproceedings{hinz2017online,
+  abbr={Springer},
+  title={Online multi-object tracking-by-clustering for intelligent transportation system with neuromorphic vision sensor},
+  author={Hinz, Gereon and Chen, Guang and Aafaque, Muhammad and R{\"o}hrbein, Florian and Conradt, J{\"o}rg and Bing, Zhenshan and Qu, Zhongnan and Stechele, Walter and Knoll, Alois},
+  booktitle={Joint German/Austrian Conference on Artificial Intelligence (K{\"u}nstliche Intelligenz)},
+  pages={142--154},
+  year={2017},
+  organization={Springer}
+}
+
+@inproceedings{jiang2017event,
+  abbr={ICNIP},
+  title={Event-based target tracking control for a snake robot using a dynamic vision sensor},
+  author={Jiang, Zhuangyi and Bing, Zhenshan and Huang, Kai and Chen, Guang and Cheng, Long and Knoll, Alois},
+  booktitle={International Conference on Neural Information Processing},
+  pages={111--121},
+  year={2017},
+  organization={Springer}
+}
+
+@INPROCEEDINGS{8324586,  
+abbr={ROBIO}, author={Xiao, Shanshan and Bing, Zhenshan and Huang, Kai and Huang, Yuhong},  booktitle={2017 IEEE International Conference on Robotics and Biomimetics (ROBIO)},   title={Snake-like robot climbs inside different pipes},   year={2017},  volume={},  number={},  pages={1232-1239},  doi={10.1109/ROBIO.2017.8324586}}
+
+@INPROCEEDINGS{8460482,  author={Bing, Zhenshan and Meschede, Claus and Huang, Kai and Chen, Guang and Rohrbein, Florian and Akl, Mahmoud and Knoll, Alois},  booktitle={2018 IEEE International Conference on Robotics and Automation (ICRA)},   title={End to End Learning of Spiking Neural Network Based on R-STDP for a Lane Keeping Vehicle},   year={2018},  volume={},  number={},  pages={4725-4732},  doi={10.1109/ICRA.2018.8460482}, preview={icra-18.png}}
+
+@ARTICLE{10.3389/fnbot.2018.00035,
+
+abbr={survey},
+
+  
+AUTHOR={Bing, Zhenshan and Meschede, Claus and Röhrbein, Florian and Huang, Kai and Knoll, Alois C.},   
+   
+TITLE={A Survey of Robotics Control Based on Learning-Inspired Spiking Neural Networks},      
+  
+JOURNAL={Frontiers in Neurorobotics},      
+  
+VOLUME={12},           
+  
+YEAR={2018},      
+    
+URL={https://www.frontiersin.org/articles/10.3389/fnbot.2018.00035},       
+  
+DOI={10.3389/fnbot.2018.00035},      
+  
+ISSN={1662-5218},   
+   
+ABSTRACT={Biological intelligence processes information using impulses or spikes, which makes those living creatures able to perceive and act in the real world exceptionally well and outperform state-of-the-art robots in almost every aspect of life. To make up the deficit, emerging hardware technologies and software knowledge in the fields of neuroscience, electronics, and computer science have made it possible to design biologically realistic robots controlled by spiking neural networks (SNNs), inspired by the mechanism of brains. However, a comprehensive review on controlling robots based on SNNs is still missing. In this paper, we survey the developments of the past decade in the field of spiking neural networks for control tasks, with particular focus on the fast emerging robotics-related applications. We first highlight the primary impetuses of SNN-based robotics tasks in terms of speed, energy efficiency, and computation capabilities. We then classify those SNN-based robotic applications according to different learning rules and explicate those learning rules with their corresponding robotic applications. We also briefly present some existing platforms that offer an interaction between SNNs and robotics simulations for exploration and exploitation. Finally, we conclude our survey with a forecast of future challenges and some associated potential research topics in terms of controlling robots based on SNNs.}
+}
+
+@INPROCEEDINGS{8633487,  abbr={IEEE-HFR}, author={Chen, Long and Yuwen, Xuan and Bing, Zhenshan and Huang, Kai and Wang, Jun},  booktitle={2018 11th International Workshop on Human Friendly Robotics (HFR)},   title={Teleoperation Snake Robots with Panorama Vision},   year={2018},  volume={},  number={},  pages={54-59},  doi={10.1109/HFR.2018.8633487}}
+
+@article{chen2018neuromorphic,
+  abbr={DVS},
+  title={Neuromorphic vision based multivehicle detection and tracking for intelligent transportation system},
+  author={Chen, Guang and Cao, Hu and Aafaque, Muhammad and Chen, Jieneng and Ye, Canbo and R{\"o}hrbein, Florian and Conradt, J{\"o}rg and Chen, Kai and Bing, Zhenshan and Liu, Xingbo and others},
+  journal={Journal of advanced transportation},
+  volume={2018},
+  year={2018},
+  publisher={Hindawi}
+}
+
+@INPROCEEDINGS{8793774,  author={Bing, Zhenshan and Jiang, Zhuangyi and Cheng, Long and Cai, Caixia and Huang, Kai and Knoll, Alois},  booktitle={2019 International Conference on Robotics and Automation (ICRA)},   title={End to End Learning of a Multi-Layered Snn Based on R-Stdp for a Target Tracking Snake-Like Robot},   year={2019},  volume={},  number={},  pages={9645-9651},  doi={10.1109/ICRA.2019.8793774}, preview={icra-19.png}}
+
+@ARTICLE{10.3389/fnbot.2019.00018,
+  
+AUTHOR={Bing, Zhenshan and Baumann, Ivan and Jiang, Zhuangyi and Huang, Kai and Cai, Caixia and Knoll, Alois},   
+   
+TITLE={Supervised Learning in SNN via Reward-Modulated Spike-Timing-Dependent Plasticity for a Target Reaching Vehicle},      
+  
+JOURNAL={Frontiers in Neurorobotics},      
+  
+VOLUME={13},           
+  
+YEAR={2019},      
+    
+URL={https://www.frontiersin.org/articles/10.3389/fnbot.2019.00018},       
+  
+DOI={10.3389/fnbot.2019.00018},      
+  
+ISSN={1662-5218},   
+   
+ABSTRACT={Spiking neural networks (SNNs) offer many advantages over traditional artificial neural networks (ANNs) such as biological plausibility, fast information processing, and energy efficiency. Although SNNs have been used to solve a variety of control tasks using the Spike-Timing-Dependent Plasticity (STDP) learning rule, existing solutions usually involve hard-coded network architectures solving specific tasks rather than solving different kinds of tasks generally. This results in neglecting one of the biggest advantages of ANNs, i.e., being general-purpose and easy-to-use due to their simple network architecture, which usually consists of an input layer, one or multiple hidden layers and an output layer. This paper addresses the problem by introducing an end-to-end learning approach of spiking neural networks constructed with one hidden layer and reward-modulated Spike-Timing-Dependent Plasticity (R-STDP) synapses in an all-to-all fashion. We use the supervised reward-modulated Spike-Timing-Dependent-Plasticity learning rule to train two different SNN-based sub-controllers to replicate a desired obstacle avoiding and goal approaching behavior, provided by pre-generated datasets. Together they make up a target-reaching controller, which is used to control a simulated mobile robot to reach a target area while avoiding obstacles in its path. We demonstrate the performance and effectiveness of our trained SNNs to achieve target reaching tasks in different unknown scenarios.},
+preview={snn-navigation-18.png}
 }
