--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -204,3 +204,134 @@ ISSN={1662-5218},
 ABSTRACT={Spiking neural networks (SNNs) offer many advantages over traditional artificial neural networks (ANNs) such as biological plausibility, fast information processing, and energy efficiency. Although SNNs have been used to solve a variety of control tasks using the Spike-Timing-Dependent Plasticity (STDP) learning rule, existing solutions usually involve hard-coded network architectures solving specific tasks rather than solving different kinds of tasks generally. This results in neglecting one of the biggest advantages of ANNs, i.e., being general-purpose and easy-to-use due to their simple network architecture, which usually consists of an input layer, one or multiple hidden layers and an output layer. This paper addresses the problem by introducing an end-to-end learning approach of spiking neural networks constructed with one hidden layer and reward-modulated Spike-Timing-Dependent Plasticity (R-STDP) synapses in an all-to-all fashion. We use the supervised reward-modulated Spike-Timing-Dependent-Plasticity learning rule to train two different SNN-based sub-controllers to replicate a desired obstacle avoiding and goal approaching behavior, provided by pre-generated datasets. Together they make up a target-reaching controller, which is used to control a simulated mobile robot to reach a target area while avoiding obstacles in its path. We demonstrate the performance and effectiveness of our trained SNNs to achieve target reaching tasks in different unknown scenarios.},
 preview={snn-navigation-18.png}
 }
+
+@INPROCEEDINGS{8793924,  author={Jiang, Zhuangyi and Xia, Pengfei and Huang, Kai and Stechele, Walter and Chen, Guang and Bing, Zhenshan and Knoll, Alois},  booktitle={2019 International Conference on Robotics and Automation (ICRA)},   title={Mixed Frame Event-Driven Fast Pedestrian Detection},   year={2019},  volume={},  number={},  pages={8332-8338},  doi={10.1109/ICRA.2019.8793924}, preview={icra-19-2.png}}
+
+@ARTICLE{10.3389/fnbot.2019.00029,
+  
+AUTHOR={Jiang, Zhuangyi and Bing, Zhenshan and Huang, Kai and Knoll, Alois},   
+   
+TITLE={Retina-Based Pipe-Like Object Tracking Implemented Through Spiking Neural Network on a Snake Robot},      
+  
+JOURNAL={Frontiers in Neurorobotics},      
+  
+VOLUME={13},           
+  
+YEAR={2019},      
+    
+URL={https://www.frontiersin.org/articles/10.3389/fnbot.2019.00029},       
+  
+DOI={10.3389/fnbot.2019.00029},      
+  
+ISSN={1662-5218},   
+   
+ABSTRACT={Vision based-target tracking ability is crucial to bio-inspired snake robots for exploring unknown environments. However, it is difficult for the traditional vision modules of snake robots to overcome the image blur resulting from periodic swings. A promising approach is to use a neuromorphic vision sensor (NVS), which mimics the biological retina to detect a target at a higher temporal frequency and in a wider dynamic range. In this study, an NVS and a spiking neural network (SNN) were performed on a snake robot for the first time to achieve pipe-like object tracking. An SNN based on Hough Transform was designed to detect a target with an asynchronous event stream fed by the NVS. Combining the state of snake motion analyzed by the joint position sensors, a tracking framework was proposed. The experimental results obtained from the simulator demonstrated the validity of our framework and the autonomous locomotion ability of our snake robot. Comparing the performances of the SNN model on CPUs and on GPUs, respectively, the SNN model showed the best performance on a GPU under a simplified and synchronous update rule while it possessed higher precision on a CPU in an asynchronous way.},
+preview={2022-08-13_22-20.png}
+}
+
+@phdthesis{bing2019biological,
+  abbr={Thesis},
+  title={Biological-inspired Hierarchical Control of a Snake-like Robot for Autonomous Locomotion},
+  author={Bing, Zhenshan},
+  year={2019},
+  school={Technische Universit{\"a}t M{\"u}nchen}
+}
+
+@article{zhou2019peak,
+  title={Peak Temperature Minimization for Hard Real-Time Systems Using DVS and DPM},
+  author={Zhou, Mingchuan and Cheng, Long and Dell’Antonio, Manuel and Wang, Xiebing and Bing, Zhenshan and Nasseri, M Ali and Huang, Kai and Knoll, Alois},
+  journal={Journal of Circuits, Systems and Computers},
+  volume={28},
+  number={06},
+  pages={1950102},
+  year={2019},
+  publisher={World Scientific}
+}
+
+@ARTICLE{10.3389/fnbot.2019.00038,
+
+abbr={DVS},
+  
+AUTHOR={Miao, Shu and Chen, Guang and Ning, Xiangyu and Zi, Yang and Ren, Kejia and Bing, Zhenshan and Knoll, Alois},   
+   
+TITLE={Neuromorphic Vision Datasets for Pedestrian Detection, Action Recognition, and Fall Detection},      
+  
+JOURNAL={Frontiers in Neurorobotics},      
+  
+VOLUME={13},           
+  
+YEAR={2019},      
+    
+URL={https://www.frontiersin.org/articles/10.3389/fnbot.2019.00038},       
+  
+DOI={10.3389/fnbot.2019.00038},      
+  
+ISSN={1662-5218}   
+   
+}
+
+@inproceedings{ijcai2019-0785,
+  abbr={IJCAI},
+  title     = {Energy-Efficient Slithering Gait Exploration for a Snake-Like Robot Based on Reinforcement Learning},
+  author    = {Bing, Zhenshan and Lemke, Christian and Jiang, Zhuangyi and Huang, Kai and Knoll, Alois},
+  booktitle = {Proceedings of the Twenty-Eighth International Joint Conference on
+               Artificial Intelligence, {IJCAI-19}},
+  publisher = {International Joint Conferences on Artificial Intelligence Organization},             
+  pages     = {5663--5669},
+  year      = {2019},
+  month     = {7},
+  doi       = {10.24963/ijcai.2019/785},
+  url       = {https://doi.org/10.24963/ijcai.2019/785},
+}
+
+@article{bing2020energy,
+  abbr={Neural Networks},
+  title={Energy-efficient and damage-recovery slithering gait design for a snake-like robot based on reinforcement learning and inverse reinforcement learning},
+  author={Bing, Zhenshan and Lemke, Christian and Cheng, Long and Huang, Kai and Knoll, Alois},
+  journal={Neural Networks},
+  volume={129},
+  pages={323--333},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{BING202021,
+abbr={Neural Networks},
+title = {Indirect and direct training of spiking neural networks for end-to-end control of a lane-keeping vehicle},
+journal = {Neural Networks},
+volume = {121},
+pages = {21-36},
+year = {2020},
+issn = {0893-6080},
+doi = {https://doi.org/10.1016/j.neunet.2019.05.019},
+url = {https://www.sciencedirect.com/science/article/pii/S0893608019301595},
+author = {Zhenshan Bing and Claus Meschede and Guang Chen and Alois Knoll and Kai Huang},
+keywords = {, End-to-end learning, R-STDP, Lane keeping},
+abstract = {Building spiking neural networks (SNNs) based on biological synaptic plasticities holds a promising potential for accomplishing fast and energy-efficient computing, which is beneficial to mobile robotic applications. However, the implementations of SNNs in robotic fields are limited due to the lack of practical training methods. In this paper, we therefore introduce both indirect and direct end-to-end training methods of SNNs for a lane-keeping vehicle. First, we adopt a policy learned using the Deep Q-Learning (DQN) algorithm and then subsequently transfer it to an SNN using supervised learning. Second, we adopt the reward-modulated spike-timing-dependent plasticity (R-STDP) for training SNNs directly, since it combines the advantages of both reinforcement learning and the well-known spike-timing-dependent plasticity (STDP). We examine the proposed approaches in three scenarios in which a robot is controlled to keep within lane markings by using an event-based neuromorphic vision sensor. We further demonstrate the advantages of the R-STDP approach in terms of the lateral localization accuracy and training time steps by comparing them with other three algorithms presented in this paper.}
+}
+
+@INPROCEEDINGS{9341520,  abbr={IROS}, author={Jiang, Zhuangyi and Otto, Richard and Bing, Zhenshan and Huang, Kai and Knoll, Alois},  booktitle={2020 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},   title={Target Tracking Control of a Wheel-less Snake Robot Based on a Supervised Multi-layered SNN},   year={2020},  volume={},  number={},  pages={7124-7130},  doi={10.1109/IROS45743.2020.9341520}}
+
+@ARTICLE{10.3389/fnbot.2020.591128,
+
+abbr={Frontiers},
+
+  
+AUTHOR={Bing, Zhenshan and Lemke, Christian and Morin, Fabric O. and Jiang, Zhuangyi and Cheng, Long and Huang, Kai and Knoll, Alois},   
+   
+TITLE={Perception-Action Coupling Target Tracking Control for a Snake Robot via Reinforcement Learning},      
+  
+JOURNAL={Frontiers in Neurorobotics},      
+  
+VOLUME={14},           
+  
+YEAR={2020},      
+    
+URL={https://www.frontiersin.org/articles/10.3389/fnbot.2020.591128},       
+  
+DOI={10.3389/fnbot.2020.591128},      
+  
+ISSN={1662-5218},   
+   
+ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, since it involves not only the complex body undulation with many joints, but also a joint pipeline that connects the vision and the locomotion. Meanwhile, it is usually difficult to jointly coordinate these two separate sub-tasks as this requires time-consuming and trial-and-error tuning. In this paper, we introduce a novel approach for solving target tracking tasks for a snake-like robot as a whole using a model-free reinforcement learning (RL) algorithm. This RL-based controller directly maps the visual observations to the joint positions of the snake-like robot in an end-to-end fashion instead of dividing the process into a series of sub-tasks. With a novel customized reward function, our RL controller is trained in a dynamically changing track scenario. The controller is evaluated in four different tracking scenarios and the results show excellent adaptive locomotion ability to the unpredictable behavior of the target. Meanwhile, the results also prove that the RL-based controller outperforms the traditional model-based controller in terms of tracking accuracy.}
+}
