--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
 
 @article{bing2022meta,
   abbr={TPAMI},
+  bibtex_show={true},
   title={Meta-reinforcement learning in non-stationary and dynamic environments},
   author={Bing, Zhenshan and Lerch, David and Huang, Kai and Knoll, Alois},
   journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
