--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,6 +14,7 @@
   pdf={https://mediatum.ub.tum.de/doc/1662422/m3y05nkuit5k7ri2moqvfpfv2.Meta-Reinforcement_Learning_in_Non-Stationary_and_Dynamic_Environments.pdf},
   html={https://sites.google.com/view/cemrl},
   code={https://github.com/zhenshan-bing/cemrl},
+  selected={true}
 }
 
 @ARTICLE{9772990,  author={Bing, Zhenshan and Zhou, Hongkuan and Li, Rui and Su, Xiaojie and Morin, Fabrice Oliver and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Industrial Electronics},   title={Solving Robotic Manipulation with Sparse Reward Reinforcement Learning via Graph-Based Diversity and Proximity},   year={2022},  volume={},  number={},  pages={1-1},  doi={10.1109/TIE.2022.3172754},
