--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,20 +18,25 @@
 }
 
 @ARTICLE{9772990,  author={Bing, Zhenshan and Zhou, Hongkuan and Li, Rui and Su, Xiaojie and Morin, Fabrice Oliver and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Industrial Electronics},   title={Solving Robotic Manipulation with Sparse Reward Reinforcement Learning via Graph-Based Diversity and Proximity},   year={2022},  volume={},  number={},  pages={1-1},  doi={10.1109/TIE.2022.3172754},
-preview={gc-hgg.png}}
+preview={gc-hgg.png},
+selected={true}
+}
 
 @ARTICLE{9810498,  
   abbr={TFS},
   author={Tan, Yaoyao and Su, Xiaojie and Bing, Zhenshan and Yang, Xiaokui and Knoll, Alois},  journal={IEEE Transactions on Fuzzy Systems},   title={Reduced-Model Based Fault Detector and Controller Design for Discrete-Time Switching Fuzzy Systems},   year={2022},  volume={},  number={},  pages={1-13},  doi={10.1109/TFUZZ.2022.3187195}}
 
+@ARTICLE{9634854,  abbr={TNNLS}, author={Bing, Zhenshan and Sewisy, Amir EI and Zhuang, Genghang and Walter, Florian and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Toward Cognitive Navigation: Design and Implementation of a Biologically Inspired Head Direction Cell Network},   year={2022},  volume={33},  number={5},  pages={2147-2158},  doi={10.1109/TNNLS.2021.3128380}, preview={hdc.png},
+selected={true}}
+
 @INPROCEEDINGS{9827283,  
   abbr={IEEE IV}, author={Zhuang, Genghang and Cagnetta, Carlo and Bing, Zhenshan and Cao, Hu and Li, Xinyi and Huang, Kai and Knoll, Alois},  booktitle={2022 IEEE Intelligent Vehicles Symposium (IV)},   title={A Biologically-Inspired Global Localization System for Mobile Robots Using LiDAR Sensor},   year={2022},  volume={},  number={},  pages={984-990},  doi={10.1109/IV51971.2022.9827283}}
 
-@ARTICLE{9634854,  abbr={TNNLS}, author={Bing, Zhenshan and Sewisy, Amir EI and Zhuang, Genghang and Walter, Florian and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Toward Cognitive Navigation: Design and Implementation of a Biologically Inspired Head Direction Cell Network},   year={2022},  volume={33},  number={5},  pages={2147-2158},  doi={10.1109/TNNLS.2021.3128380}, preview={hdc.png}}
+@ARTICLE{9611526,  author={Bing, Zhenshan and Álvarez, Erick and Cheng, Long and Morin, Fabrice O. and Li, Rui and Su, Xiaojie and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Robotic Manipulation in Dynamic Scenarios via Bounding-Box-Based Hindsight Goal Generation},   year={2021},  volume={},  number={},  pages={1-14},  doi={10.1109/TNNLS.2021.3124366}, preview={bbox.png},
+selected={true}}
 
-@ARTICLE{9611526,  author={Bing, Zhenshan and Álvarez, Erick and Cheng, Long and Morin, Fabrice O. and Li, Rui and Su, Xiaojie and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Robotic Manipulation in Dynamic Scenarios via Bounding-Box-Based Hindsight Goal Generation},   year={2021},  volume={},  number={},  pages={1-14},  doi={10.1109/TNNLS.2021.3124366}, preview={bbox.png}}
-
-@ARTICLE{9466373,  author={Bing, Zhenshan and Brucker, Matthias and Morin, Fabrice O. and Li, Rui and Su, Xiaojie and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Complex Robotic Manipulation via Graph-Based Hindsight Goal Generation},   year={2021},  volume={},  number={},  pages={1-14},  doi={10.1109/TNNLS.2021.3088947}, preview={g-hgg.png}}
+@ARTICLE{9466373,  author={Bing, Zhenshan and Brucker, Matthias and Morin, Fabrice O. and Li, Rui and Su, Xiaojie and Huang, Kai and Knoll, Alois},  journal={IEEE Transactions on Neural Networks and Learning Systems},   title={Complex Robotic Manipulation via Graph-Based Hindsight Goal Generation},   year={2021},  volume={},  number={},  pages={1-14},  doi={10.1109/TNNLS.2021.3088947}, preview={g-hgg.png},
+selected={true}}
 
 @ARTICLE{10.3389/fnbot.2021.688344,
   
