--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -318,7 +318,9 @@ doi = {https://doi.org/10.1016/j.neunet.2019.05.019},
 url = {https://www.sciencedirect.com/science/article/pii/S0893608019301595},
 author = {Zhenshan Bing and Claus Meschede and Guang Chen and Alois Knoll and Kai Huang},
 keywords = {, End-to-end learning, R-STDP, Lane keeping},
-abstract = {Building spiking neural networks (SNNs) based on biological synaptic plasticities holds a promising potential for accomplishing fast and energy-efficient computing, which is beneficial to mobile robotic applications. However, the implementations of SNNs in robotic fields are limited due to the lack of practical training methods. In this paper, we therefore introduce both indirect and direct end-to-end training methods of SNNs for a lane-keeping vehicle. First, we adopt a policy learned using the Deep Q-Learning (DQN) algorithm and then subsequently transfer it to an SNN using supervised learning. Second, we adopt the reward-modulated spike-timing-dependent plasticity (R-STDP) for training SNNs directly, since it combines the advantages of both reinforcement learning and the well-known spike-timing-dependent plasticity (STDP). We examine the proposed approaches in three scenarios in which a robot is controlled to keep within lane markings by using an event-based neuromorphic vision sensor. We further demonstrate the advantages of the R-STDP approach in terms of the lateral localization accuracy and training time steps by comparing them with other three algorithms presented in this paper.}
+abstract = {Building spiking neural networks (SNNs) based on biological synaptic plasticities holds a promising potential for accomplishing fast and energy-efficient computing, which is beneficial to mobile robotic applications. However, the implementations of SNNs in robotic fields are limited due to the lack of practical training methods. In this paper, we therefore introduce both indirect and direct end-to-end training methods of SNNs for a lane-keeping vehicle. First, we adopt a policy learned using the Deep Q-Learning (DQN) algorithm and then subsequently transfer it to an SNN using supervised learning. Second, we adopt the reward-modulated spike-timing-dependent plasticity (R-STDP) for training SNNs directly, since it combines the advantages of both reinforcement learning and the well-known spike-timing-dependent plasticity (STDP). We examine the proposed approaches in three scenarios in which a robot is controlled to keep within lane markings by using an event-based neuromorphic vision sensor. We further demonstrate the advantages of the R-STDP approach in terms of the lateral localization accuracy and training time steps by comparing them with other three algorithms presented in this paper.},
+code={https://github.com/zhenshan-bing/cemrl},
+selected={true}
 }
 
 @INPROCEEDINGS{9341520,  abbr={IROS}, author={Jiang, Zhuangyi and Otto, Richard and Bing, Zhenshan and Huang, Kai and Knoll, Alois},  booktitle={2020 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},   title={Target Tracking Control of a Wheel-less Snake Robot Based on a Supervised Multi-layered SNN},   year={2020},  volume={},  number={},  pages={7124-7130},  doi={10.1109/IROS45743.2020.9341520}}
